# ISG-Profiler_VIP

./: README.md
isg-profiler/: .gitignore  README.md  isg_profiler.sh  pyproject.toml
isg-profiler/input/: .gitignore  sample_metadata.example.tsv
isg-profiler/reference/: .gitignore  Amniota398_sp_id.list  Aves_Mam_mbio_ISGcntl_mnsd.txt  Aves_rem.txt  Mars_rem.txt
isg-profiler/src/quant_normalizer/: __init__.py  __main__.py  cli.py
isg-profiler/src/quant_normalizer/core/: isg_scorer.py  sample_processor.py
isg-profiler/src/quant_normalizer/io/: output_writer.py  reference_loader.py
isg-profiler/src/quant_normalizer/utils/: logger.py
isg-vip/: .gitignore  README.md  checksums.sha256  pyproject.toml
isg-vip/input/: .gitignore
isg-vip/src/isg_vip/: __init__.py  __main__.py  pipelines.py
isg-vip/src/isg_vip/io/: __init__.py  constants.py  data_loader.py  model_loader.py  output_writer.py
isg-vip/src/isg_vip/model_dir/: encoder_lgb_2.pkl  encoder_lr_0.pkl  encoder_lr_1.pkl  encoder_lr_3.pkl  encoder_lr_4.pkl  encoder_meta_0.pkl  encoder_meta_1.pkl  encoder_meta_2.pkl  encoder_meta_3.pkl  encoder_meta_4.pkl  final_model_lgb_0.pkl  final_model_lgb_1.pkl  final_model_lgb_2.pkl  final_model_lgb_3.pkl  final_model_lgb_4.pkl  final_model_lr_0.pkl  final_model_lr_1.pkl  final_model_lr_2.pkl  final_model_lr_3.pkl  final_model_lr_4.pkl  final_model_meta_0.pkl  final_model_meta_1.pkl  final_model_meta_2.pkl  final_model_meta_3.pkl  final_model_meta_4.pkl  thresholds_lgb.npy  thresholds_lr.npy  thresholds_meta.npy
isg-vip/src/isg_vip/prediction/: ensemble.py  run_inference.py
isg-vip/src/isg_vip/preprocessing/: normalizer.py
isg-vip/src/isg_vip/reference/: gene_list.txt
isg-vip/src/isg_vip/utils/: logger.py
